@@ -18,7 +18,7 @@
 			legend { font-size: 110%; line-height: 1.5; }			
 		</style>
 		<script language="JavaScript">
-			var flags = new Array(	"V", "A", "OO", "F", "MG", "GM", "L", "R", "SB",
+			var flags = new Array(	"V", "QT", "OO", "F", "MG", "GM", "L", "R", "SB",
 						"IB", "ST", "T", "N", "SH", "SR", "SW", "PZ", "G",
 						"JP", "ID", "CL", "US", "MQ", "SE", "TH", "BU", "WG",
                                                 "CB", "LT", "GT", "FO", "RO", "M", "B", "JM", "WA", "NJ",
